# Hackathon-Route-planning

./: .gitignore  README.md  app.py  gitignore  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/mock/: data_inspections.json  data_waste.json  optimized_inspections.json  optimized_waste.json  research_context.json
docs/: disruption_handling.md
scripts/: generate_all_data.py  research_and_context.py
src/hillingdon_routes/: __init__.py  app.py  config.py  disruptions.py  generate_stops.py  graph_utils.py  solver.py  viz.py
tests/: test_generate_stops.py
